--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,8 +31,10 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with ( url: item_orders_path, method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
-    <%= render 'shared/error_messages', model: f.object %>
+    <%= form_with model: @order_mailing_address, url: item_orders_path(@item.id), id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %>
+      
+      <%= render 'shared/error_messages', model: f.object %>
+    
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -43,7 +45,7 @@
           <label class="form-text">カード情報</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field :card_number, class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
+        <%= f.text_field :number, class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
           <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
