--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,18 +26,19 @@
       </span>
     </div>
 
-    <% if user_signed_in? && current_user.id == @item.user_id %>
-      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-    <% else %>
-      <% if user_signed_in? %>
+    <% unless Order.exists?(item_id: @item.id) %>
+      <% if user_signed_in? && current_user.id == @item.user_id %>
+        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
+      <% else %>
+        <% if user_signed_in? %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-        <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+          <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
+        <% end %>
       <% end %>
     <% end %>
-
     <div class="item-explain-box">
       <span><%= @item.explanation %></span>
     </div>
